only just realised this existed.

--- a/config.yml
+++ b/config.yml
@@ -1,3 +1,5 @@
+# THIS CONFIG IS INVALID. USING IT WILL NOT WORK.
+
 debug: false
 uuid: ff5e0002-f1a4-4fe8-a012-0bf43a0b918d
 token_id: EjqSWgss0rXBJ9Mu
